ENH: update the license url
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15197 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/SlicerWelcome/Resources/HTML/About.html
+++ b/QTModules/SlicerWelcome/Resources/HTML/About.html
@@ -12,7 +12,7 @@
     </p>
     
     <p align="justify">
-      <b>3D Slicer</b> is distributed under a BSD-style license; for details about the contribution and software license agreement, please see the <a href="http://www.slicer.org/cgi-bin/License/SlicerLicenseForm.pl">3D Slicer Software License Agreement</a>. This software has been designed for research purposes only and has not been reviewed or approved by the Food and Drug Administration, or by any other agency.
+      <b>3D Slicer</b> is distributed under a BSD-style license; for details about the contribution and software license agreement, please see the <a href="http://www.slicer.org/pages/LicenseText">3D Slicer Software License Agreement</a>. This software has been designed for research purposes only and has not been reviewed or approved by the Food and Drug Administration, or by any other agency.
     </p>
     
     <p align="justify">
